--- a/templates/whale.html
+++ b/templates/whale.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <head>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='ico/whale.ico') }}">
     </head>
     <body>
         <div id="content">
